[package]
name = "md5h"
version = "1.0.0"
description = "Calculates MD5 hash of folder and subfolders"
authors = ["tarpaha <ppopchikovsky@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
walkdir = "2.3.2"
itertools = "0.10.1"
md5 = "0.7.0"
num_cpus = "1.13.0"
indicatif="0.15.0"
clap = "2.33.3"
